--- a/Final SIH/Html/Final profile.html
+++ b/Final SIH/Html/Final profile.html
@@ -17,7 +17,7 @@
           <nav aria-label="breadcrumb" class="main-breadcrumb">
             <ol class="breadcrumb">
                 <div class="links">
-                    <a href="Final index.html" class="btn"> Home Page</a>
+                    <a href="../../index.html" class="btn"> Home Page</a>
                     <a href="Final profile.html" class="btn">User's Profile </a>
 
                 </div>
