--- a/index.html
+++ b/index.html
@@ -6,30 +6,30 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Home Page</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-        <link rel="stylesheet" href="../Css/Final Index.css">
+        <link rel="stylesheet" href="/sih-files/Final SIH/Css/Final Index.css">
     </head> 
     <body>
         <header class="header">
-            <a href="../index.html" class="logo">
-                <img src="../Images/4.png"alt="">
+            <a href="index.html" class="logo">
+                <img src="/sih-files/Final SIH/Images/4.png"alt="">
             </a>
            <nav class="navbar">
             <a href="#about">about</a> 
             <a href="#review">review</a> 
             <a href="#contact">contact</a> 
             <a href="#blogs">Blogs</a> 
-            <a href="Final Journal.html">Journal</a> 
-            <a href="Final Activitys.html">fun activity</a> 
-            <a href="Final Doc-Talk.html">doc talk</a> 
-            <a href="Final Survey.html">Self-Assessment</a>
-            <a href="Final profile.html">Profile</a>
-            <a href="Final Sign-up.html">Login / Sign-In</a>
+            <a href="/sih-files/Final SIH/Html/Final Journal.html">Journal</a> 
+            <a href="/sih-files/Final SIH/Html/Final Activitys.html">fun activity</a> 
+            <a href="/sih-files/Final SIH/Html/Final Doc-Talk.html">doc talk</a> 
+            <a href="/sih-files/Final SIH/Html/Final Survey.html">Self-Assessment</a>
+            <a href="/sih-files/Final SIH/Html/Final profile.html">Profile</a>
+            <a href="/sih-files/Final SIH/Html/Final Sign-up.html">Login / Sign-In</a>
            </nav>
         </header>
         <section class="home" id="home">
             <div class="content">
                 <a href="index.html" class="logo">
-                    <img src="../Images/logohogaya.png"alt="">
+                    <img src="/sih-files/Final SIH/Images/logohogaya.png"alt="">
                 </a>
                 <p>Embrace your life's adventure with Mental Operating System!!</p>
                 <a href="#" class="btn">Explore Us!</a>
@@ -40,7 +40,7 @@
             <h1 class="heading"><span>ABOUT </span> US</h1>
             <div class="row">
                 <div class="image">
-                    <img src ="../Images/meditate.png" alt="">
+                    <img src ="/sih-files/Final SIH/Images/meditate.png" alt="">
                 </div>
                 <div class="content">
                     <h2>WHAT IS OUR PAGE ABOUT?</h2>
@@ -54,9 +54,9 @@
             <h1 class="heading"><span>User's</span> Review</h1>
             <div class="box-container">
                 <div class="box">
-                    <img src="../Images/trytrytrytry.png"alt="" class="qoutes">
+                    <img src="/sih-files/Final SIH/Images/trytrytrytry.png"alt="" class="qoutes">
                     <p> I can't express enough how transformative my experience has been with Ment.OS . This platform has truly been a beacon of hope in my journey towards better mental health.</p>
-                    <img src="../Images/review1.png" alt="" class="user">
+                    <img src="/sih-files/Final SIH/Images/review1.png" alt="" class="user">
                     <h3>Steffi Sen</h3>
                     <div class="stars">
                         <i class="fas fa-star"></i>
@@ -67,9 +67,9 @@
                     </div>
                 </div>
                 <div class="box">
-                    <img src="../Images/trytrytrytry.png"alt="" class="qoutes">
+                    <img src="/sih-files/Final SIH/Images/trytrytrytry.png"alt="" class="qoutes">
                     <p> One of the standout features of Ment.OS is its commitment to inclusivity and diversity. It offers support and guidance for individuals from all walks of life, regardless of their age, gender, or background. It's a place where everyone feels welcomed and understood.</p>
-                    <img src="../Images/review2.png" alt=""class="user">
+                    <img src="/sih-files/Final SIH/Images/review2.png" alt=""class="user">
                     <h3>Rhea Das</h3>
                     <div class="stars">
                         <i class="fas fa-star"></i>
@@ -80,9 +80,9 @@
                     </div>
                 </div>
                 <div class="box">
-                    <img src="../Images/trytrytrytry.png"alt="" class="qoutes">
+                    <img src="/sih-files/Final SIH/Images/trytrytrytry.png"alt="" class="qoutes">
                     <p> The content provided on the website is not only informative but also incredibly reassuring. The articles, videos, and blog posts cover a wide range of mental health topics, making it a valuable resource for anyone seeking knowledge and guidance.</p>
-                    <img src="../Images/review3.png" alt=""class="user">
+                    <img src="/sih-files/Final SIH/Images/review3.png" alt=""class="user">
                     <h3>James Watt</h3>
                     <div class="stars">
                         <i class="fas fa-star"></i>
@@ -125,37 +125,37 @@
             <div class="box-container">
                 <div class="box">
                     <div class="image">
-                        <img src="../Images/blog1.png" alt="">
+                        <img src="/sih-files/Final SIH/Images/blog1.png" alt="">
                     </div>
                     <div class="content">
                         <a href="#" class="title">LIVING HAPPY</a>
                        <br><span> by admin / 02nd Oct, 2020</span><br>
                         <p>Sometimes, life can be a little tricky, and you might feel sad or worried......</p>
-                        <a href="Final Blogs.html" class="btn">Read More</a>
+                        <a href="/sih-files/Final SIH/Html/Final Blogs.html" class="btn">Read More</a>
                     </div>
                 </div>
 
                 <div class="box">
                     <div class="image">
-                        <img src="../Images/blog2.png" alt="">
+                        <img src="/sih-files/Final SIH/Images/blog2.png" alt="">
                     </div>
                     <div class="content">
                         <a href="#" class="title">WHAT A BEAUTIFUL DAY</a>
                         <br><span> By admin / 20th Nov, 2020</span><br>
                         <p>Every morning, when you wake up, it's like unwrapping a brand new gift. A beauti.....</p>
-                        <a href="Final Blogs.html" class="btn">Read More</a>
+                        <a href="/sih-files/Final SIH/Html/Final Blogs.html" class="btn">Read More</a>
                     </div>
                 </div>
 
                 <div class="box">
                     <div class="image">
-                        <img src="../Images/blog3.png" alt="">
+                        <img src="/sih-files/Final SIH/Images/blog3.png" alt="">
                     </div>
                     <div class="content">
                         <a href="#" class="title">I CAN DO IT</a>
                         <br><span> by admin / 12th Dec, 2020</span><br>
                         <p>The journey of achieving your goals and dreams begins with one simple but.......</p>
-                        <a href="Final Blogs.html" class="btn">Read More</a>
+                        <a href="/sih-files/Final SIH/Html/Final Blogs.html" class="btn">Read More</a>
                     </div>
                 </div>
             </div>
@@ -179,7 +179,6 @@
     <div class="credit">created by <span>Team CYBER KITTENS </span> | all rights are reserved</div>
     </section>
 
-       <script src="script.js"></script>
     </body>
 
 </html>
