--- a/Final SIH/Html/Final Sign-up.html
+++ b/Final SIH/Html/Final Sign-up.html
@@ -22,7 +22,7 @@
         <nav>
             <img width="100px" height="100px" src="../Images/Final Logo.png"  alt="logo" />
             <ul>
-              <a href="Final index.html"><li>Home</li></a>
+              <a href="../../index.html"><li>Home</li></a>
               <a href="Final Activitys.html"><li>Activities</li></a>
               <a href="Final Journal.html"><li>Daily Journal</li></a>
               <a href="Final Survey.html"><li>Self-Assessment</li></a>
